--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,9 +8,13 @@
         {% endblock %}
 
         {% block javascripts %}
+            <script type="text/javascript" src="{{ asset('build/app.js') }}"></script>
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            <div id="root"></div>
+        {% endblock %}
+
     </body>
 </html>
