--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,6 @@
         {% block stylesheets %}
         {% endblock %}
         {% block javascript %}
-        {{ encore_entry_script_tags('app') }}
     {% endblock %}
 
 
@@ -18,6 +17,10 @@
 
         {% block body %}
 
+        {% endblock %}
+
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
 
     </body>
